--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^3.1.0"
+    "@nuxtjs/tailwindcss": "^3.1.0",
+    "airtable": "^0.10.1"
   }
 }
