--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "pipas",
-  "version": "1.0.0",
-  "private": true,
+  "name": "pipas-2024",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate --modern"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
-    "nuxt": "^2.14.6"
-  },
-  "devDependencies": {
-    "@nuxtjs/tailwindcss": "^3.1.0",
-    "airtable": "^0.10.1",
-    "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1"
+    "astro": "^4.5.6",
+    "@astrojs/check": "^0.5.9",
+    "typescript": "^5.4.2"
   }
 }
