--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.9",
+    "@astrojs/db": "^0.8.8",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.5.6",
     "tailwindcss": "^3.4.1",
