--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/db": "^0.8.8",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.5.6",
+    "astro-devtool-breakpoints": "^0.3.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
   }
