--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.5.15",
     "astro-devtool-breakpoints": "^0.3.0",
+    "astro-embed": "^0.7.0",
+    "marked": "^12.0.1",
+    "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3"
   }
