--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "astro-devtool-breakpoints": "^0.3.0",
     "astro-embed": "^0.7.0",
     "marked": "^12.0.1",
-    "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "tailwind-variants": "^0.2.1"
   }
 }
