--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.7.0",
-    "@astrojs/db": "^0.11.5",
+    "@astrojs/db": "^0.11.6",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.10.2",
+    "astro": "^4.10.3",
     "astro-devtool-breakpoints": "^0.3.0",
-    "marked": "^12.0.1",
+    "marked": "^13.0.0",
     "tailwind-variants": "^0.2.1",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "prettier-plugin-tailwindcss": "^0.6.5"
   }
 }
